# painless-panes-cv

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
01-data-generation/: README.md
01-data-generation/labels/: 1KobT5xJiDIpWw==.txt  8Y_zk9hL-aCxZg==.txt  E6tzpI7oQfgyWQ==.txt  IMG_20230916_100755968.txt  IMG_20230916_100805493.txt  IMG_20230916_100809379.txt  IMG_20230916_100822353.txt  IMG_20230916_100910227_HDR.txt  IMG_20230916_100913291_HDR.txt  IMG_20230916_101004987_HDR.txt  IMG_20230916_101028716_HDR.txt  IMG_20230916_101037247_HDR.txt  IMG_20230916_101047456_HDR.txt  IMG_20230916_162739032.txt  Jar0jATNnBGvrA==.txt  OAa-S9fPszhn6g==.txt  RWs3LFd9IEQcGg==.txt  UFgiTD9uZUtsgw==.txt  Y4upUWCNdM0UeQ==.txt  ZbmU1bdwMm3LdA==.txt  aVhnWedV6MyKvg==.txt  kYJqOO26rKsQYA==.txt  mo3JcdBR6e7XjQ==.txt
02-model-training/: 01_train.py  02_predict.py  README.md
02-model-training/window-model/: 02_predict.py
03-image-processing/: 01_measure-windows.py  01_test.py  02_find-aruco.py  03_find-aruco-live.py  README.md
painless_panes/: __init__.py  _api.py  _archive.py  cv.py  cv_archive.py  util.py
painless_panes/model/: __init__.py  _model.py
painless_panes_cv/: __init__.py  _api.py
scripts/: serve-local.sh
test/: measure.py  test_measurement.py  test_measurements.py
training-data/: 01_download.py  README.md
training-data/labels/: l3sRZmsYB3j3sw==.txt
