[tool.poetry]
name = "painless-panes"
version = "0.1.0"
description = ""
authors = ["Andreas Copan <avcopan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
opencv-contrib-python = "^4.8.0.76"
opencv-python = "^4.8.0.76"
numpy = "^1.26.0"
flask = "^2.3.3"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
onnxruntime = "^1.16.0"
scipy = "^1.11.3"
scikit-image = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
